--- a/webhook_handler/requirements.txt
+++ b/webhook_handler/requirements.txt
@@ -1,9 +1,12 @@
-functions-framework
 line-bot-sdk==3.13.0
-pandas
+functions-framework==3.8.2
 google-cloud-discoveryengine==0.12.3
-google-cloud-storage
-vertexai
+google-cloud-storage==2.18.2
+vertexai==1.71.1
 google-cloud-dialogflow-cx==1.36.0
 google-cloud-speech
+aiohttp==3.10.5
+yarl==1.8.1
+frozenlist==1.3.1
+pandas
 
