--- a/webhook_handler/requirements.txt
+++ b/webhook_handler/requirements.txt
@@ -2,6 +2,7 @@ line-bot-sdk==3.13.0
 functions-framework==3.8.2
 google-cloud-discoveryengine==0.12.3
 google-cloud-storage==2.18.2
+google-cloud-datastore==2.20.2
 vertexai==1.71.1
 google-cloud-dialogflow-cx==1.36.0
 google-cloud-speech
