--- a/liff_scan_nid/package.json
+++ b/liff_scan_nid/package.json
@@ -7,12 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.3.2",
     "@line/liff": "^2.24.0",
     "axios": "^1.7.9",
     "vue": "3.4.38"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "5.1.3",
-    "vite": "5.4.2"
+    "vite": "^5.4.11"
   }
 }
