--- a/liff_shopping_more/firebase.json
+++ b/liff_shopping_more/firebase.json
@@ -1,10 +1,7 @@
 {
   "hosting": {
+    "site": "cj-shopping-more",
     "public": "dist",
-    "rewrites": [{
-      "source": "**",
-      "destination": "/index.html"
-    }],
     "ignore": [
       "firebase.json",
       "**/.*",
