--- a/liff_shopping_more/package.json
+++ b/liff_shopping_more/package.json
@@ -7,8 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@line/liff": "2.24.0",
-    "axios": "^1.7.7",
+    "@line/liff": "^2.24.0",
+    "axios": "^1.7.9",
     "vue": "3.4.38"
   },
   "devDependencies": {
